--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-size: 1rem;
 }
 .grey{
-    color: #393E46;
+    color: #646a73;
 }
 .weight-600{
     font-weight: 600;
@@ -25,7 +25,7 @@ body{
     padding: 0% 10%;
     background-color: #2f44348f;
 }
-.upper .btn{
+.upper .nav-link{
     margin-left: 1rem;
 }
 .title{
@@ -177,11 +177,169 @@ hr{
     width: 100%;
     margin-top: 0;
 }
-.card{
+.car, .card{
     margin: auto;
+    cursor: pointer;
 }
-
-
+#testinomials{
+    margin: auto;
+    width: 90%;
+    padding: 5% 0%;
+    text-align: center;
+}
+#testinomials .row{
+    position: relative;
+}
+#testinomials .car{
+    margin-top: 5%;
+    border-radius: 10px;
+    transition: 0.2s;
+}
+.flo-1{
+    background-color: #E31C37;;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    position: absolute;
+    width: 18rem;
+    top: 29%;
+}
+.flo-2{
+    background-color: #153892;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    position: absolute;
+    width: 18rem;
+    top: 38%;
+    left: 75%;
+}
+.flo-3{
+    background-color: #0000A0;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    position: absolute;
+    width: 18rem;
+    top: 30%;
+    left: 50%
+}
+.flo-4{
+    background-color: #000000;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+}
+.flo-5{
+    background-color: #07AF56;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+}
+.flo-6{
+    background-color: #73C9E2;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+}
+.flo-7{
+    background-color: #7A232F;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+}
+.flo-8{
+    background-color: #AD2118;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+}
+.flo-9{
+    background-color: #07AF56;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    position: absolute;
+    width: 18rem;
+    top: 76%;
+    left: 26%;
+}
+#testinomials .col-lg-3 :hover{
+    transform: rotate(+2deg);
+}
+#testinomials .row p:hover{
+    transform: rotate(0deg);
+}
+#testinomials{
+    padding-bottom: 20%;
+}
+#testinomials p{
+    margin: 10% 5% 0 0;
+}
+#pricing{
+    background-color: #e6eaf3;
+    color: rgb(91, 90, 90);
+}
+.money{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding: 10% 5%;
+}
+.inner-money{
+    background-color: white;
+    padding: 1%;
+    color: black;
+    border-radius: 15px;
+    text-align: left;
+    line-height: 2;
+}
+.money-1{
+    background-color: #ddf0ff;
+    border-radius: 10px;
+    padding: 10%;
+}
+.money-1 p{
+    padding: 4% 0 80% 0;
+}
+.money-2{
+    margin-top: 54%;
+    background-color: #f2f8fd;
+    border-radius: 10px;
+    padding: 1%;
+    padding: 10%;
+}
+.money-3{
+    margin-top: 55%;
+    background-color: #5272f0;
+    -webkit-mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    mask-image: linear-gradient(40deg,rgba(0,0,0,1.0) 10%,rgba(0,0,0,.80) 96%);
+    border-radius: 10px;
+    color: #FFF;
+    padding: 10%;
+}
+.disabled{
+    font-size: 1rem;
+    
+}
+.price{
+    position: absolute;
+    font-size: 3rem;
+    right: 40%;
+    text-decoration: underline;
+}
+#relation{
+    padding: 10% 5%;
+    color: #000000;
+    text-align: center;
+}
+#relation h1{
+    margin: 5%;
+}
+#footer{
+    color: #000000;
+    padding: 10% 5%;
+    text-align: center;
+    background-color: #f6f6f6;
+}
+#footer i{
+    margin: 1%;
+    padding-bottom: 3%;
+}
+#footer p{
+    margin-top: 1%;
+}
 
 /* .nav-long:hover::after{
     width: 100px;
@@ -219,6 +377,9 @@ hr{
         color: #FFF;
         opacity: 1;
     }
+    .upper .nav-link{
+        margin-left: 0;
+    }
     .text{
         text-align: left;
     }
@@ -237,5 +398,13 @@ hr{
     }
     .nav-brand{
         font-size: 2rem;
+    }
+    #testinomials *{
+        position: static;
+        font-size: 0.8rem;
+        width:fit-content;
+    }
+    .money-3 *, .money-2 *{
+        text-align: left;
     }
 }
